--- a/p8105_hw3_yc4195.md
+++ b/p8105_hw3_yc4195.md
@@ -1,7 +1,7 @@
 p8105_hw3_yc4195.RMD
 ================
 Yimin Chen yc4195
-2022-10-08
+2022-10-12
 
 ## Problem 1
 
@@ -14,10 +14,16 @@ instacart %>%
   summarize(n_obs = n())%>%
   arrange(desc(n_obs))%>%
   filter(n_obs > 10000)%>%
-  ggplot(aes(x = aisle, y = n_obs,color =  aisle)) + geom_point()
+  mutate(
+        aisle = factor(aisle),
+        aisle = fct_reorder(aisle, n_obs)
+    ) %>% 
+  ggplot(aes(x = aisle, y = n_obs)) + geom_point()+
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
 <img src="p8105_hw3_yc4195_files/figure-gfm/unnamed-chunk-1-1.png" width="90%" />
+
 Make a table showing the three most popular items in each of the aisles
 “baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
 Include the number of times each item is ordered in your table.
@@ -115,55 +121,28 @@ character variable to a factor variable.
 ``` r
 accel_table <-
   accel %>% 
-  group_by(day_id, day, week) %>%
-  summarize(total_activity = sum(activity_count)) %>% 
+  group_by(week,day) %>%
+  summarize(total_activity = sum(activity_count)) %>%pivot_wider(
+    names_from = day, 
+    values_from = total_activity
+  )%>%
   knitr::kable(digits = 0)
 ```
 
-    ## `summarise()` has grouped output by 'day_id', 'day'. You can override using the
+    ## `summarise()` has grouped output by 'week'. You can override using the
     ## `.groups` argument.
 
 ``` r
 accel_table
 ```
 
-| day_id | day       | week | total_activity |
-|:-------|:----------|-----:|---------------:|
-| 1      | Friday    |    1 |         480543 |
-| 2      | Monday    |    1 |          78828 |
-| 3      | Saturday  |    1 |         376254 |
-| 4      | Sunday    |    1 |         631105 |
-| 5      | Thursday  |    1 |         355924 |
-| 6      | Tuesday   |    1 |         307094 |
-| 7      | Wednesday |    1 |         340115 |
-| 8      | Friday    |    2 |         568839 |
-| 9      | Monday    |    2 |         295431 |
-| 10     | Saturday  |    2 |         607175 |
-| 11     | Sunday    |    2 |         422018 |
-| 12     | Thursday  |    2 |         474048 |
-| 13     | Tuesday   |    2 |         423245 |
-| 14     | Wednesday |    2 |         440962 |
-| 15     | Friday    |    3 |         467420 |
-| 16     | Monday    |    3 |         685910 |
-| 17     | Saturday  |    3 |         382928 |
-| 18     | Sunday    |    3 |         467052 |
-| 19     | Thursday  |    3 |         371230 |
-| 20     | Tuesday   |    3 |         381507 |
-| 21     | Wednesday |    3 |         468869 |
-| 22     | Friday    |    4 |         154049 |
-| 23     | Monday    |    4 |         409450 |
-| 24     | Saturday  |    4 |           1440 |
-| 25     | Sunday    |    4 |         260617 |
-| 26     | Thursday  |    4 |         340291 |
-| 27     | Tuesday   |    4 |         319568 |
-| 28     | Wednesday |    4 |         434460 |
-| 29     | Friday    |    5 |         620860 |
-| 30     | Monday    |    5 |         389080 |
-| 31     | Saturday  |    5 |           1440 |
-| 32     | Sunday    |    5 |         138421 |
-| 33     | Thursday  |    5 |         549658 |
-| 34     | Tuesday   |    5 |         367824 |
-| 35     | Wednesday |    5 |         445366 |
+| week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
+|-----:|-------:|--------:|----------:|---------:|-------:|---------:|-------:|
+|    1 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 | 631105 |
+|    2 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 | 422018 |
+|    3 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 | 467052 |
+|    4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
+|    5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
 
 From the generated table, we can see during Saturday in week 4 and 5,
 the total activity falls into a lowest value.Overall, there isn’t a
@@ -173,8 +152,9 @@ clear trend for total activity pattern for each day.
 accel_plot <-
   accel%>% 
   group_by(day, day_id) %>% 
-  mutate(activity_time = parse_number(activity_time)) %>% 
+   mutate(activity_time = parse_number(activity_time)) %>% 
   ggplot(aes(x = activity_time, y = activity_count, group = day_id, color = day)) + 
+  theme(legend.position = "right") +
   labs(
     title = " 24-hour activity time courses for each day",
     x = "Time of Day",
@@ -185,6 +165,7 @@ accel_plot <-
     breaks = c(0, 180, 360, 540, 720, 900, 1080, 1260, 1440),
     labels = c("0:00", "3:00", "6:00", "9:00", "12:00", "15:00", "18:00", "21:00", "23:59"),
     limits = c(0, 1440)) +
+  theme(plot.title = element_text(hjust = 0.5))+
   geom_line()
 accel_plot
 ```
@@ -199,19 +180,7 @@ noon.
 
 ``` r
 data("ny_noaa")
-```
 
-The ny_noaa dataset contains informationaccessed from the NOAA National
-Climatic Data Center. The ataset has 2595176 rows and 7 columns.The
-variables in this dataset are id, date, prcp, snow, snwd, tmax, tmin .
-`id`: the Weather station ID `date`: Date of observation `prcp`:
-Precipitation `tmax`: Maximum temperature `tmin`: Minimum temperature
-`snow`: Snowfall (mm) `snwd`: Snow depth (mm) The extent to which
-missing data is an issue is determined by whether the data is missing at
-random since the station may not collect some precipitation or snow
-data.
-
-``` r
 noaa_df = ny_noaa %>% 
   janitor::clean_names() %>% 
   separate(date, into = c("year", "month", "day"), convert = TRUE) %>%
@@ -219,10 +188,48 @@ noaa_df = ny_noaa %>%
     year = as.numeric(year),
     month = as.numeric(month),
     day = as.numeric(day),
-    tmax = as.numeric(tmax) / 10,
-    tmin = as.numeric(tmin) / 10,
+    tmax = as.numeric(tmax)/10,
+    tmin = as.numeric(tmin)/10,
     prcp = prcp / 10 )
+skimr::skim_without_charts(noaa_df %>% select(-id))
 ```
+
+|                                                  |                          |
+|:-------------------------------------------------|:-------------------------|
+| Name                                             | noaa_df %\>% select(-id) |
+| Number of rows                                   | 2595176                  |
+| Number of columns                                | 8                        |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_   |                          |
+| Column type frequency:                           |                          |
+| numeric                                          | 8                        |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ |                          |
+| Group variables                                  | None                     |
+
+Data summary
+
+**Variable type: numeric**
+
+| skim_variable | n_missing | complete_rate |    mean |     sd |     p0 |    p25 |    p50 |    p75 |  p100 |
+|:--------------|----------:|--------------:|--------:|-------:|-------:|-------:|-------:|-------:|------:|
+| year          |         0 |          1.00 | 1996.50 |   9.19 | 1981.0 | 1988.0 | 1997.0 | 2005.0 |  2010 |
+| month         |         0 |          1.00 |    6.56 |   3.45 |    1.0 |    4.0 |    7.0 |   10.0 |    12 |
+| day           |         0 |          1.00 |   15.73 |   8.80 |    1.0 |    8.0 |   16.0 |   23.0 |    31 |
+| prcp          |    145838 |          0.94 |    2.98 |   7.82 |    0.0 |    0.0 |    0.0 |    2.3 |  2286 |
+| snow          |    381221 |          0.85 |    4.99 |  27.22 |  -13.0 |    0.0 |    0.0 |    0.0 | 10160 |
+| snwd          |    591786 |          0.77 |   37.31 | 113.54 |    0.0 |    0.0 |    0.0 |    0.0 |  9195 |
+| tmax          |   1134358 |          0.56 |   13.98 |  11.14 |  -38.9 |    5.0 |   15.0 |   23.3 |    60 |
+| tmin          |   1134420 |          0.56 |    3.03 |  10.40 |  -59.4 |   -3.9 |    3.3 |   11.1 |    60 |
+
+The ny_noaa dataset contains informationaccessed from the NOAA National
+Climatic Data Center. The dataset has 2595176 rows and 7 columns.The
+variables in this dataset are id, date, prcp, snow, snwd, tmax, tmin ,
+which include: id: Weather station ID date: Date of observation prcp:
+Precipitation (tenths of mm) snow: Snowfall (mm) snwd: Snow depth (mm)
+tmax: Maximum temperature (tenths of degrees C) tmin: Minimum
+temperature (tenths of degrees C) The extent to which missing data is an
+issue is determined by whether the data is missing at random since the
+station may not collect some precipitation or snow data. More detailed
+information is presented in the chart above.
 
 ``` r
 noaa_df %>% 
@@ -265,7 +272,7 @@ two_panel_plot = noaa_df %>%
    drop_na() %>% 
   ggplot(aes(x = year, y = mean_tmax, group = id, color = month)) +
   geom_point() +
-  geom_smooth() +
+  geom_smooth() + 
   labs(
     title = "Average max temperature in January and July in each NYC station across years",
     x = "Year",
@@ -278,6 +285,7 @@ two_panel_plot
 ```
 
 <img src="p8105_hw3_yc4195_files/figure-gfm/two_panel_plot1-1.png" width="90%" />
+
 The average maximum temperature in January ranged from -10°C to 10°C
 degrees, with two severely points falling below -10°C degrees, which can
 be seen as two outliers.The average maximum temperature in July ranged
@@ -294,22 +302,26 @@ plot1=
   ggplot(aes(x = tmin, y = tmax)) +
   geom_hex() +
   labs(
-    title = "Daily temperature 1981-2010",
-    x = "Minimum temperature (Celsius)",
-    y = "Maximum temperature (Celsius)"
+    title = "tmax versus tmin",
+    x = "Minimum temperature ",
+    y = "Maximum temperature "
   ) + 
-  theme(legend.position = "right")
+  theme(legend.position = "right")+
+  theme(plot.title = element_text(hjust = 0.5))
 plot2=
   noaa_df %>%
   filter(snow > 0 ,snow < 100) %>%
   group_by(year) %>%
   ggplot(aes(x = year, y = snow,group = year)) +
-  geom_boxplot(fill = 'pink') + 
   labs(
-    title = 'NY Snowfall value by year',
+    title = 'NYC Snowfall count by year',
     y = 'Snowfall in mm',
     x = 'Year'
-  )
+  )+scale_x_continuous(
+                     breaks =c(1980,1985,1990,1995,2000,2005,2010),
+                     limits = c(1980,2011))+ 
+  stat_boxplot(geom = "boxplot",  width = 0.6)+
+  theme(plot.title = element_text(hjust = 0.5))
 plot1 / plot2  
 ```
 
