--- a/p8105_hw3_yc4195.md
+++ b/p8105_hw3_yc4195.md
@@ -1,7 +1,7 @@
 p8105_hw3_yc4195.RMD
 ================
 Yimin Chen yc4195
-2022-10-12
+2022-10-13
 
 ## Problem 1
 
@@ -310,7 +310,7 @@ plot1=
   theme(plot.title = element_text(hjust = 0.5))
 plot2=
   noaa_df %>%
-  filter(snow > 0 ,snow < 100) %>%
+  filter(snow > 0 ,snow <100) %>%
   group_by(year) %>%
   ggplot(aes(x = year, y = snow,group = year)) +
   labs(
@@ -320,7 +320,7 @@ plot2=
   )+scale_x_continuous(
                      breaks =c(1980,1985,1990,1995,2000,2005,2010),
                      limits = c(1980,2011))+ 
-  stat_boxplot(geom = "boxplot",  width = 0.6)+
+  geom_boxplot(width = 0.5,fill="pink")+
   theme(plot.title = element_text(hjust = 0.5))
 plot1 / plot2  
 ```
