--- a/p8105_hw3_yc4195.md
+++ b/p8105_hw3_yc4195.md
@@ -5,10 +5,56 @@ Yimin Chen yc4195
 
 ## Problem 1
 
+#### Read in the data
+
 ``` r
 data("instacart")
 
+instacart = 
+  instacart %>% 
+  as_tibble(instacart)
+```
 
+#### Answer questions about the data
+
+This dataset has 1384617 rows and 15 columns.Variables contain user,
+order, and product IDs, as well as the sequence in which each product
+was put to the basket. There are various order-level variables that
+describe the day and time of the order, as well as the number of days
+since the last order. Then there are many item-specific variables that
+describe the product name (e.g., Yogurt, Avocado), department (e.g.,
+dairy and eggs, produce), and aisle (e.g., yogurt, fresh fruits), as
+well as if the item has been ordered previously by this user. Overall,
+there are 39123 products found in 131209 orders from 131209 distinct
+users.
+
+There are 134 aisles in all, with fresh vegetables and fruits having by
+far the most things ordered.The figure that follows displays the
+quantity of things ordered in each aisle. Aisles are arranged in
+ascending order of item count.
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  arrange(desc(n))
+```
+
+    ## # A tibble: 134 × 2
+    ##    aisle                              n
+    ##    <chr>                          <int>
+    ##  1 fresh vegetables              150609
+    ##  2 fresh fruits                  150473
+    ##  3 packaged vegetables fruits     78493
+    ##  4 yogurt                         55240
+    ##  5 packaged cheese                41699
+    ##  6 water seltzer sparkling water  36617
+    ##  7 milk                           32644
+    ##  8 chips pretzels                 31269
+    ##  9 soy lactosefree                26240
+    ## 10 bread                          23635
+    ## # … with 124 more rows
+
+``` r
 instacart %>%
   group_by(aisle) %>%
   summarize(n_obs = n())%>%
@@ -18,42 +64,46 @@ instacart %>%
         aisle = factor(aisle),
         aisle = fct_reorder(aisle, n_obs)
     ) %>% 
-  ggplot(aes(x = aisle, y = n_obs)) + geom_point()+
+  ggplot(aes(x = aisle, y = n_obs)) + geom_point()+labs(title = "Number of items ordered in each aisle") +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
-<img src="p8105_hw3_yc4195_files/figure-gfm/unnamed-chunk-1-1.png" width="90%" />
+<img src="p8105_hw3_yc4195_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
 
-Make a table showing the three most popular items in each of the aisles
+The table below shows the three most popular items in each of the aisles
 “baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
-Include the number of times each item is ordered in your table.
+Include the number of times each item is ordered in this table.
 
 ``` r
 instacart %>% 
-  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
   group_by(aisle) %>% 
   count(product_name) %>% 
   mutate(rank = min_rank(desc(n))) %>% 
   filter(rank < 4) %>% 
-  arrange(aisle, rank) %>% 
-  knitr::kable(digits = 1)
+  arrange(desc(n)) %>%
+  knitr::kable()
 ```
 
 | aisle                      | product_name                                  |    n | rank |
 |:---------------------------|:----------------------------------------------|-----:|-----:|
+| packaged vegetables fruits | Organic Baby Spinach                          | 9784 |    1 |
+| packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
+| packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
 | baking ingredients         | Light Brown Sugar                             |  499 |    1 |
 | baking ingredients         | Pure Baking Soda                              |  387 |    2 |
 | baking ingredients         | Cane Sugar                                    |  336 |    3 |
 | dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |   30 |    1 |
 | dog food care              | Organix Chicken & Brown Rice Recipe           |   28 |    2 |
 | dog food care              | Small Dog Biscuits                            |   26 |    3 |
-| packaged vegetables fruits | Organic Baby Spinach                          | 9784 |    1 |
-| packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
-| packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
 
 Make a table showing the mean hour of the day at which Pink Lady Apples
 and Coffee Ice Cream are ordered on each day of the week; format this
 table for human readers (i.e. produce a 2 x 7 table).
+
+From the table, we can see Pink Lady Apples are generally purchased
+slightly earlier in the day than Coffee Ice Cream, with the exception of
+day 5.
 
 ``` r
 instacart %>% 
@@ -64,16 +114,16 @@ instacart %>%
     names_from = order_dow,
     values_from = mean_hour
   )%>% 
-  knitr::kable()
+  knitr::kable(digits = 2)
 ```
 
     ## `summarise()` has grouped output by 'product_name'. You can override using the
     ## `.groups` argument.
 
-| product_name     |        0 |        1 |        2 |        3 |        4 |        5 |        6 |
-|:-----------------|---------:|---------:|---------:|---------:|---------:|---------:|---------:|
-| Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 | 15.31818 | 15.21739 | 12.26316 | 13.83333 |
-| Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
+| product_name     |     0 |     1 |     2 |     3 |     4 |     5 |     6 |
+|:-----------------|------:|------:|------:|------:|------:|------:|------:|
+| Coffee Ice Cream | 13.77 | 14.32 | 15.38 | 15.32 | 15.22 | 12.26 | 13.83 |
+| Pink Lady Apples | 13.44 | 11.36 | 11.70 | 14.25 | 11.55 | 12.78 | 11.94 |
 
 ## Problem 2
 
@@ -223,13 +273,26 @@ Data summary
 The ny_noaa dataset contains informationaccessed from the NOAA National
 Climatic Data Center. The dataset has 2595176 rows and 7 columns.The
 variables in this dataset are id, date, prcp, snow, snwd, tmax, tmin ,
-which include: id: Weather station ID date: Date of observation prcp:
-Precipitation (tenths of mm) snow: Snowfall (mm) snwd: Snow depth (mm)
-tmax: Maximum temperature (tenths of degrees C) tmin: Minimum
-temperature (tenths of degrees C) The extent to which missing data is an
-issue is determined by whether the data is missing at random since the
-station may not collect some precipitation or snow data. More detailed
-information is presented in the chart above.
+which include:
+
+\#id: Weather station ID
+
+\#date: Date of observation
+
+\#prcp: Precipitation (tenths of mm)
+
+\#snow: Snowfall (mm)
+
+\#snwd: Snow depth (mm)
+
+\#tmax: Maximum temperature (tenths of degrees C)
+
+\#tmin: Minimum temperature (tenths of degrees C)
+
+The extent to which missing data is an issue is determined by whether
+the data is missing at random since the station may not collect some
+precipitation or snow data. More detailed information is presented in
+the chart above.
 
 ``` r
 noaa_df %>% 
