--- a/p8105_hw3_yc4195.md
+++ b/p8105_hw3_yc4195.md
@@ -1,7 +1,7 @@
 p8105_hw3_yc4195.RMD
 ================
 Yimin Chen yc4195
-2022-10-13
+2022-10-16
 
 ## Problem 1
 
@@ -220,7 +220,7 @@ accel_plot <-
 accel_plot
 ```
 
-<img src="p8105_hw3_yc4195_files/figure-gfm/q3-1.png" width="90%" />
+<img src="p8105_hw3_yc4195_files/figure-gfm/a single-panel plot that shows the 24-hour activity time courses for each day and use color to indicate day of the week-1.png" width="90%" />
 
 Most of the activities focus on morning to noon (9am to 12) and evening
 (7pm to 11pm).On Sunday, participants tend to be more active during the
