--- a/p8105_hw3_yc4195.md
+++ b/p8105_hw3_yc4195.md
@@ -290,9 +290,11 @@ which include:
 \#tmin: Minimum temperature (tenths of degrees C)
 
 The extent to which missing data is an issue is determined by whether
-the data is missing at random since the station may not collect some
-precipitation or snow data. More detailed information is presented in
-the chart above.
+the data is missing reasonably since the station may not collect some
+precipitation,snow data, and some records for max&min temperature. Also,
+in NYC, it’s not snowing or precipitating for most days so some missing
+data makes sense. More detailed information of missing data summary is
+presented in the chart above.
 
 ``` r
 noaa_df %>% 
